styles/style.css
html {
  scroll-behavior: smooth;
}

body {
  margin: 0 auto;
  max-width: 65ch;
  line-height: 1.6;
  color: hsl(224, 71%, 4%);
  background-color: hsl(220, 13%, 91%);
  padding: min(5rem, 10%);
  font-size: clamp(1.125rem, calc(1vw + 1rem), 1.65rem);
  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
  text-wrap: balance;
}

h1,
h2,
h3 {
  line-height: 1.2;
}

a {
  /* color: #7f0b22; */
  color: hsl(224, 64%, 25%);
  border-radius: 4px;
}

button {
  padding: 0.5em 1em;
  border-radius: 5px;
  font: inherit;
  border: 1px solid hsl(220, 65%, 30%);
  cursor: pointer;
  transition: all 300ms;
  color: hsl(220, 13%, 91%);
  background-color: hsl(220, 65%, 33%);
  box-shadow: 1px 1px 10px hsla(220, 65%, 33%, 1);
}

button:hover {
  background-color: hsl(220, 65%, 25%);
}

code {
  background-color: hsl(220, 13%, 85%);
  border-radius: 4px;
  padding: 0.25em;
  display: inline-block;
  margin-block: 0.25rem;
}

pre {
  padding: 0.5em;
}

dl dt {
  font-family: monospace;
  margin-bottom: 0.5em;
}

dl dd {
  margin-bottom: 1em;
}

.skip-nav-link {
  background-color: hsl(220, 65%, 33%);
  color: hsl(220, 13%, 91%);
  position: absolute;
  top: 0;
  transform: translateY(-200%);
  padding: 0.5rem 1.5rem;
  border-radius: 0 0 0.25rem 0.25rem;
  border: none;
  font-weight: bold;
  left: 1rem;
  transition: transform 300ms ease-in-out;
  text-decoration: none;
  box-shadow: 1px 1px 30px hsla(220, 65%, 95%, 0.8);
}

.skip-nav-link:focus {
  transform: translateY(0);
}

*:focus:not(:hover) {
  outline: 3px solid #fb7185;
}
@media (prefers-color-scheme: dark) {
  body {
    background-color: hsl(224, 71%, 4%);
    color: #ddd;
  }

  button {
    border: 1px solid hsl(220, 65%, 70%);
    background-color: hsl(224, 65%, 80%);
    color: hsl(224, 71%, 4%);
    box-shadow: 1px 1px 5px hsla(220, 65%, 95%, 0.8);
  }

  button:hover {
    background-color: hsl(224, 65%, 70%);
  }

  a {
    color: hsl(224, 65%, 80%);
  }

  .skip-nav-link {
    color: hsl(224, 71%, 4%);
    background-color: hsl(224, 65%, 80%);
  }
}

